# file_trunknizer

./: .gitignore  README.md  file_trunknizer.py  pyproject.toml
