# PATH: /pyproject.toml

[project]
name = "file-trunknizer"
version = "0.1.0"
description = "A CLI utility to safely truncate file contents for safe repository uploads"
authors = [
    {name = "Junsung Park / Daanta", email = "daanta@naver.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    # 실제 운영에 필요한 패키지가 있으면 여기에 추가
    # 예: "requests>=2.31.0"
]

[tool.poetry]
package-mode = false   # 패키징이 아니라 단순 의존성 관리용

# 개발용 의존성
[tool.poetry.group.dev.dependencies]
ruff = "^0.13.0"        # 코드 포맷 / 검사
mypy = "^1.18.1"        # 타입 체크
pytest = "^8.4.2"       # 테스트
ipython = "^9.5.0"      # CLI 실험
jupyter = "^1.1.1"      # 노트북 실험
ipykernel = "^6.30.1"   # Jupyter kernel 지원
pyinstaller = "^6.15.0" # 바이너리 빌드용

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
